_sass/_drinksMenu.sass
.drink-item
  padding: 0 0 20px 10px

.drink-name
  display: inline-block
  font-style: oblique
  font-weight: bold
  text-align: left
  width: 250px

.drink-ingredients
  display: inline-block
  text-align: left
  // width: 450px

@media screen and (max-width: 700px)
  .drink-item
    padding: 0 0 3px 3px

  .drink-ingredients
    display: block
    font-size: 0.9em

